@startuml

package TicTacToe.Common
{
  interface IGameModel
  interface IBoardModel
  interface IPlayerModel
  interface IAIModel
}

IGameModel *-- IAIModel
IGameModel *-- IBoardModel
IGameModel *-- IPlayerModel

package TicTacToe.Models
{
  class GameModel <<Serializable>> implements IGameModel
  class BoardModel <<Serializable>> implements IBoardModel
  class PlayerModel <<Serializable>> implements IPlayerModel
  class AIModel <<Serializable>> implements IAIModel
  class AITurnModel <<Serializable>>
}

GameModel *-- BoardModel
GameModel *-- AIModel
GameModel *-- AITurnModel
GameModel *-- PlayerModel

package TicTacToe.Views
{
  class GameView <<MonoBehaviour>>
  class BoardView <<MonoBehaviour>>
  class SlotView <<MonoBehaviour>>
  class PlayerView <<MonoBehaviour>>
  class TurnView <<MonoBehaviour>>
  class SlotView <<MonoBehaviour, IPointerClickHandler>>
}

GameView *-down- IGameModel
GameView *-up- BoardView
GameView *-up- PlayerView
GameView *-up- TurnView
BoardView *-up- SlotView

package TicTacToe.Controllers
{
  class GameController
  class AITurnController
  class BoardController
}

GameController *-- GameModel
GameController *-- AITurnController
GameController *-left- BoardController
AITurnController *-- BoardController

package TicTacToe
{
  class GameSystem <<MonoBehaviour>>
  class GameSystemData <<ScriptableObject>>
}

GameSystem *-- GameSystemData
GameSystem *-- GameController
GameSystem *-up- GameView
GameSystemData *-- GameModel

@enduml
